--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -125,7 +125,7 @@ a:hover, #header.nav-solid nav a:hover {
 
 #banner {
     background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;
-    background-size:385px 475x;
+    background-size:289px 356px;
 }
 
 
