--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -124,9 +124,8 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;
+    background: url("../images/banner-images/banner-image-1.jpg") no-repeat right top:150px;
     background-size: 385px 475px;
-    background-repeat: no-repeat;
 }
 
 
