--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -124,8 +124,11 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/banner-images/banner-image-1.jpg") no-repeat right top:150px;
+    background: url("../images/banner-images/banner-image-1.jpg") no-repeat;
     background-size: 385px 475px;
+    position: static;
+    right: 150px;
+    top:100px;
 }
 
 
