--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -124,8 +124,10 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/banner-images/banner-image-1.jpg") no-repeat right top;
+    background: url("../images/banner-images/banner-image-1.jpg") no-repeat;
+    background-attachment: relative;
     background-size: 40%;
+    background-position: 50% 20%;
 }
 
 
