--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -123,12 +123,12 @@ a:hover, #header.nav-solid nav a:hover {
 
 /* Banner Background and Text Colors */
 
-#banner {
+/*#banner {
     background: url("../images/banner-images/banner-image-1.jpg") no-repeat;
     background-attachment: relative;
     background-size: 40%;
     background-position: 50% 20%;
-}
+}*/
 
 
 /*------------------------------------------------------------------------------------------*/
